--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
+    "react-key-index": "^0.1.1",
     "react-multi-carousel": "^2.8.2",
+    "react-phone-number-input": "^3.2.12",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toggle-slider": "^0.4.0",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
