--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-key-index": "^0.1.1",
     "react-multi-carousel": "^2.8.2",
     "react-phone-number-input": "^3.2.12",
